# For more info about the pyproject.toml file, see:
# https://xebia.com/blog/an-updated-guide-to-setuptools-and-pyproject-toml/

# Run `pip install -e ".[dev]"` to install with dev dependencies.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
dependencies = [
    "streamlit",
]
dynamic = ["version"]
requires-python = ">=3.12"
authors = [
]
description = "An Example Project"
readme = "README.md"

[project.optional-dependencies]
dev = [
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"
